--- a/_data/alumni_visitors.yml
+++ b/_data/alumni_visitors.yml
@@ -6,3 +6,9 @@
   number_educ: 2
   education1: M.S. with Prof. Dan Xu, Yunnan University
   education2: Ph.D. Candidate with Prof. Chen Li, Zhejiang University
+- name: Wenxuan Fan
+  photo: Wenxuan.jpg
+  info: Visitor, Jan 2022 -
+  email: fanwenxuan@westlake.edu.cn
+  number_educ: 1
+  education1: B.Eng. candidate in Pharmaceutical Engineering, East China Univ. S&T
