--- a/_data/alumni_visitors.yml
+++ b/_data/alumni_visitors.yml
@@ -7,7 +7,7 @@
   education1: M.S. with Prof. Dan Xu, Yunnan University
   education2: Ph.D. Candidate with Prof. Chen Li, Zhejiang University
 - name: Wenxuan Fan
-  photo: Wenxuan.jpg
+  photo: Wenxuan.jpeg
   info: Visitor, Jan 2022 -
   email: fanwenxuan@westlake.edu.cn
   number_educ: 1
