--- a/_data/alumni_bsc.yml
+++ b/_data/alumni_bsc.yml
@@ -1,2 +1,8 @@
 #- name: test, Spring 2021
+- name: Wenxuan Fan
+  photo: fanwenxuan.jpeg
+  info: Visitor, Jan 2022 -
+  email: fanwenxuan@westlake.edu.cn
+  number_educ: 1
+  education1: B.Eng. candidate in Pharmaceutical Engineering, East China Univ. S&T
 
