--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,7 @@
 - headline: <b> We are recuriting!</b>
 
+- date: Jun 5 2022
+  headline: "Farewell LuLu!"
 - date: Apr 12 2022
   headline: "Welcome Yonghe!"
 - date: Mar 1 2022
