--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,9 @@
 - headline: <b> We are recuriting!</b>
 
+- date: July 5 2022
+  headline: "Welcome Yihang!"
+- date: Jun 25 2022
+  headline: "Welcome Chunyi!"
 - date: Jun 5 2022
   headline: "Farewell LuLu!"
 - date: Apr 12 2022
