--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -18,3 +18,9 @@
   email: xiayonghe@westlake.edu.cn
   number_educ: 1
   education1: B.S. in Bioscience, Minnan Normal University
+- name: Yihang Ding
+  photo: dingyihang.jpeg
+  info: Research Assistant, july 2022-
+  email: dingyihang@westlake.edu.cn
+  number_educ: 1
+  education1: B.E. in Bioinformatics, Southeast University
