add lulu to alumni

--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -5,3 +5,10 @@
   number_educ: 2
   education1: B.S. in Biotechnology, Nanjing Normal University
   education2: M.S. in Computer Science and technology, Nanjing Normal University
+- name: Lu Lu
+  photo: lulu.jpg
+  info: Visitor, Sep 2021-Jun 2022
+  email: tkrwy@126.com
+  number_educ: 2
+  education1: M.S. with Prof. Dan Xu, Yunnan University
+  education2: Ph.D. Candidate with Prof. Chen Li, Zhejiang University
