--- a/_data/alumni_visitors.yml
+++ b/_data/alumni_visitors.yml
@@ -1,7 +1,7 @@
 #- name: Doohee Cho, Spring 2016
 - name: Wenxuan Fan
   photo: fanwenxuan.jpeg
-  info: Visitor, Jan 2022 -
+  info: Visitor, Jan. 2022 -
   email: fanwenxuan@westlake.edu.cn
   number_educ: 1
   education1: B.Eng. candidate in Pharmaceutical Engineering, East China Univ. S&T
