--- a/_data/students.yml
+++ b/_data/students.yml
@@ -28,7 +28,7 @@
   education1: B.S. in Bioinformatics, Soochow University
 # - name: Chunyi Wang
 - name: Mengdie Yao
-  photo: mengdie.png
+  photo: mengdie.jpg
   info: PhD student, Nov. 2022 -
   email: yaomengdie@westlake.edu.cn
   number_educ: 3
