--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,22 +1,28 @@
 - headline: <b> We are recuriting!</b>
 
-- date: July 5 2022
+- date: Nov. 7 2022
+  headline: "Welcome Mengdie & Zhirui!"
+- date: Oct. 11 2022
+  headline: "Welcome Xiaoyu!"
+- date: Oct. 10 2022
+  headline: "Welcome Guoqiang!"
+- date: Jul. 5 2022
   headline: "Welcome Yihang!"
-- date: Jun 25 2022
+- date: Jun. 25 2022
   headline: "Welcome Chunyi!"
-- date: Jun 5 2022
+- date: Jun. 5 2022
   headline: "Farewell LuLu!"
-- date: Apr 12 2022
+- date: Apr. 12 2022
   headline: "Welcome Yonghe!"
-- date: Mar 1 2022
+- date: Mar. 1 2022
   headline: "Welcome Qing!"
-- date: Jan 12 2022
+- date: Jan. 12 2022
   headline: "Welcome Wenxuan!"
-- date: Oct 22 2021
+- date: Oct. 22 2021
   headline: "Welcome Zhen Xu!"
-- date: Oct 15 2021
+- date: Oct. 15 2021
   headline: "Welcome Jinhong & Weixiang!"
-- date: Sep 18 2021
+- date: Sep. 18 2021
   headline: "Welcome Lu Lu!"
-- date: Aug 18 2021
+- date: Aug. 18 2021
   headline: "Welcome Yunchao!"
