--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -13,7 +13,7 @@
   education1: B.S. in Agronomy, Zhejiang University
   education2: Ph.D. in Biophysics, Zhejiang University (2014.8-2020.9); Visiting Student in Population Epigenetics and Epigenomics, Technical University of Munich (2018.3-2019.4)
 - name: Yonghe Xia
-  photo: xiayonghe.jpeg
+  photo: xiayonghe.jpg
   info: Research Assistant, Apr 2022-
   email: xiayonghe@westlake.edu.cn
   number_educ: 1
@@ -24,3 +24,4 @@
   email: dingyihang@westlake.edu.cn
   number_educ: 1
   education1: B.E. in Bioinformatics, Southeast University
+- name: Guoqiang Jiang
