--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -25,3 +25,6 @@
   number_educ: 1
   education1: B.E. in Bioinformatics, Southeast University
 - name: Guoqiang Jiang
+  photo: 
+  info: Lab manager
+  email: jiangguoqiang@westlake.edu.cn
