--- a/_data/alumni_visitors.yml
+++ b/_data/alumni_visitors.yml
@@ -1,6 +1,6 @@
 #- name: Doohee Cho, Spring 2016
 - name: Xiaoyu Ma
-  photo: maxiaoyu.jpg
+  photo: xiaoyu.jpg
   info: Visitor, Jan. 2022 -
   number_educ: 2
   education1: M.S in Biochemistry and Molecular Biology,Qiqihar University
