--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -25,6 +25,9 @@
   number_educ: 1
   education1: B.E. in Bioinformatics, Southeast University
 - name: Guoqiang Jiang
-  photo: 
+  photo: anon.jpg
   info: Lab manager
   email: jiangguoqiang@westlake.edu.cn
+  number_educ: 2
+  education1: B.S. in Applied Psychology, Binzhou Medical University
+  education2: M.S. in Biotechnology, Dalian Medical University
