--- a/_data/students.yml
+++ b/_data/students.yml
@@ -28,7 +28,7 @@
   education1: B.S. in Bioinformatics, Soochow University
 - name: Wenxuan Fan
   photo: fanwenxuan.jpeg
-  info: Visitor, Jan. 2022 -
+  info: PhD student, Jan. 2022 -
   email: fanwenxuan@westlake.edu.cn
   number_educ: 1
   education1: B.Eng. candidate in Pharmaceutical Engineering, East China Univ. S&T
