--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -26,7 +26,7 @@
   education1: B.E. in Bioinformatics, Southeast University
 - name: Guoqiang Jiang
   photo: anon.jpg
-  info: Lab manager
+  info: Lab manager, Oct 2022-
   email: jiangguoqiang@westlake.edu.cn
   number_educ: 2
   education1: B.S. in Applied Psychology, Binzhou Medical University
