--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -25,7 +25,7 @@
   number_educ: 1
   education1: B.E. in Bioinformatics, Southeast University
 - name: Guoqiang Jiang
-  photo: anon.jpg
+  photo: jiangguoqiang.jpg
   info: Lab manager, Oct 2022-
   email: jiangguoqiang@westlake.edu.cn
   number_educ: 2
