--- a/_data/students.yml
+++ b/_data/students.yml
@@ -31,7 +31,7 @@
   info: PhD student, Jan. 2022 -
   email: fanwenxuan@westlake.edu.cn
   number_educ: 1
-  education1: B.Eng. candidate in Pharmaceutical Engineering, East China Univ. S&T
+  education1: B.E. in Pharmaceutical Engineering, East China Univ. S&T
 - name: Chunyi Wang
   photo: wangchunyi.png
   info: PhD student, Nov. 2022 -
