--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,32 +1,32 @@
 - name: Yanmei Dou
   photo: yanmei.jpg
-  info: Assistant professor, Sep 2021-
+  info: Assistant professor, Sept. 2021-
   email: douyanmei@westlake.edu.cn
   number_educ: 2
   education1: Ph.D. with Prof. Liping Wei, Peking University
   education2: Postdoc with Prof. Peter J Park, Harvard Medical School
 - name: Yunchao Zheng 
   photo: yunchao.jpg
-  info: Postdoc Fellow, Oct 2021-
+  info: Postdoc Fellow, Oct. 2021-
   email: zhengyunchao@westlake.edu.cn 
   number_educ: 2
   education1: B.S. in Agronomy, Zhejiang University
   education2: Ph.D. in Biophysics, Zhejiang University (2014.8-2020.9); Visiting Student in Population Epigenetics and Epigenomics, Technical University of Munich (2018.3-2019.4)
 - name: Yonghe Xia
   photo: xiayonghe.jpg
-  info: Research Assistant, Apr 2022-
+  info: Research Assistant, Apr. 2022-
   email: xiayonghe@westlake.edu.cn
   number_educ: 1
   education1: B.S. in Bioscience, Minnan Normal University
 - name: Yihang Ding
   photo: dingyihang.jpeg
-  info: Research Assistant, july 2022-
+  info: Research Assistant, Jul. 2022-
   email: dingyihang@westlake.edu.cn
   number_educ: 1
   education1: B.E. in Bioinformatics, Southeast University
 - name: Guoqiang Jiang
   photo: jiangguoqiang.jpg
-  info: Lab manager, Oct 2022-
+  info: Lab manager, Oct. 2022-
   email: jiangguoqiang@westlake.edu.cn
   number_educ: 2
   education1: B.S. in Applied Psychology, Binzhou Medical University
