--- a/_data/news.yml
+++ b/_data/news.yml
@@ -6,6 +6,8 @@
   headline: "Welcome Xiaoyu!"
 - date: Oct. 10 2022
   headline: "Welcome Guoqiang!"
+- date: Sept. 2022
+  headline: "Welcome Yuanshi!"
 - date: Jul. 5 2022
   headline: "Welcome Yihang!"
 - date: Jun. 25 2022
