--- a/_data/alumni_bsc.yml
+++ b/_data/alumni_bsc.yml
@@ -1,5 +1,4 @@
 #- name: test, Spring 2021
 - name: Yuanshi Wang
   photo: wangyuanshi.jpg
-  info: Undergraduate Student, Sep 2022- 
-  
+  info: Undergraduate Student, Sept. 2022- 
