--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -1,13 +1,13 @@
 - name: Zhen Xu
   photo: xuzhen.jpg
-  info: Research Assistant, Nov 2021-Mar 2022
+  info: Research Assistant, Nov. 2021-Mar. 2022
   email: 
   number_educ: 2
   education1: B.S. in Biotechnology, Nanjing Normal University
   education2: M.S. in Computer Science and technology, Nanjing Normal University
 - name: Lu Lu
   photo: lulu.jpg
-  info: Visitor, Sep 2021-Jun 2022
+  info: Visitor, Sept. 2021-Jun. 2022
   email: tkrwy@126.com
   number_educ: 2
   education1: M.S. with Prof. Dan Xu, Yunnan University
