--- a/_data/students.yml
+++ b/_data/students.yml
@@ -33,11 +33,11 @@
   number_educ: 1
   education1: B.E. in Pharmaceutical Engineering, East China Univ. S&T
 - name: Chunyi Wang
-  photo: wangchunyi.png
+  photo: wangchunyi.jpg
   info: PhD student, Nov. 2022 -
   email: yaomengdie@westlake.edu.cn
   number_educ: 1
-  education1: B.S. in Pratacultural Science, Lanzhou University
+  education1: B.S. in Agronomy, Lanzhou University
 - name: Mengdie Yao
   photo: mengdie.jpg
   info: PhD student, Nov. 2022 -
