for xiaoyu and meiyue

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,11 +1,12 @@
 - headline: <b> We are recuriting!</b>
-
+- date: Nov. 10 2022
+  headline: "Welcome Meiyue!"
 - date: Nov. 7 2022
   headline: "Welcome Mengdie & Zhirui!"
 - date: Oct. 11 2022
   headline: "Welcome Xiaoyu!"
 - date: Oct. 10 2022
-  headline: "Welcome Guoqiang!"
+  headline: "Welcome Guoqiang !"
 - date: Sept. 2022
   headline: "Welcome Yuanshi!"
 - date: Jul. 5 2022
