--- a/_data/students.yml
+++ b/_data/students.yml
@@ -21,7 +21,7 @@
   education1: B.S. in Biology, Northwest A&F University
   education2: M.S. in Physiology, Nanjing University
 - name: Qing Yang
-  photo: yangqing.jpg
+  photo: yangqing_2.jpg
   info: PhD student, Feb. 2022 -
   email: yangqing@westlake.edu.cn
   number_educ: 1
