--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -12,3 +12,10 @@
   number_educ: 2
   education1: M.S. with Prof. Dan Xu, Yunnan University
   education2: Ph.D. Candidate with Prof. Chen Li, Zhejiang University
+- name: Meiyue Hu
+  photo: humeiyue.jpg
+  info: Research Assistant, Nov. 2022-Feb. 2023
+  email: humeiyue@westlake.edu.cn
+  number_educ: 2
+  education1: B.S China Pharmaceutical University(Basic Pharmacy)
+  education2: M.S Shanghai Jiao Tong University(Molecular Biology)
