--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - headline: <b> We are recuriting!</b>
+- date: Feb. 4 2023
+  headline: "Farewell Meiyue!"
 - date: Nov. 10 2022
   headline: "Welcome Meiyue!"
 - date: Nov. 7 2022
