--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -33,7 +33,12 @@
   education2: M.S. in Biotechnology, Dalian Medical University
 - name: Xiaoyu Ma
   photo: xiaoyu.jpg
-  info: Visitor, Oct. 2022 -
+  info: Research Assistant, Oct. 2022 -
   number_educ: 2
   education1: M.S in Biochemistry and Molecular Biology,Qiqihar University
   education2: B.S in Biology ,Qiqihar university
+- name: Luo Yan
+  photo: yanluo.jpg
+  info: Research Assistant, Mar. 2023 -
+  number_educ: 1
+  education1: Botany, Kunming Institute of Botany,Chinese Academy of Science
