--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -19,3 +19,9 @@
   number_educ: 2
   education1: B.S China Pharmaceutical University(Basic Pharmacy)
   education2: M.S Shanghai Jiao Tong University(Molecular Biology)
+- name: Yihang Ding
+  photo: dingyihang.jpeg
+  info: Research Assistant, Jul. 2022-
+  email: dingyihang@westlake.edu.cn
+  number_educ: 1
+  education1: B.E. in Bioinformatics, Southeast University
