--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - headline: <b> We are recuriting!</b>
+- date: May. 26 2023
+  headline: "Farewell Yihang!"
 - date: Mar. 24 2023
   headline: "Welcome Yan Luo!"
 - date: Feb. 4 2023
