--- a/_data/students.yml
+++ b/_data/students.yml
@@ -53,3 +53,10 @@
   number_educ: 2
   education1: B.S. in Biotechnology, Northwest A&F University
   education2: M.S. in Animal Genetics, Breeding and Reproduction, Northwest A&F University
+- name: Xing Wu
+  photo: wuxin.jpg
+  info: PhD student, Nov. 2023 -
+  email: wuxin@westlake.edu.cn
+  number_educ: 2
+  education1: B.Ec. in Statistics, Jiangxi University of Finance and Economics
+  education2: M.S. in Statistics, Central South University
