--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,6 @@
 - headline: <b> We are recuriting!</b>
 - date: Nov. 22 2023
-  headline: "Welcome Wu Xin!"
+  headline: "Welcome Wu Xing!"
 - date: May. 26 2023
   headline: "Farewell Yihang!"
 - date: Mar. 24 2023
