--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -12,6 +12,13 @@
   number_educ: 2
   education1: B.S. in Agronomy, Zhejiang University
   education2: Ph.D. in Biophysics, Zhejiang University (2014.8-2020.9); Visiting Student in Population Epigenetics and Epigenomics, Technical University of Munich (2018.3-2019.4)
+- name: Wenlong Li
+  photo: liwenlong
+  info: Postdoc Fellow, Apr. 2024-
+  email: liwenlong@westlake.edu.cn
+  number_educ: 2
+  education1: B.S. in Agronomy, Shanxi Agricultural University
+  education2: Ph.D. in Animal Genetics, Breeding and Reproduction, China Agricultural University (transition from M.S.)
 - name: Yonghe Xia
   photo: xiayonghe.jpg
   info: Research Assistant, Apr. 2022-
