--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -13,7 +13,7 @@
   education1: B.S. in Agronomy, Zhejiang University
   education2: Ph.D. in Biophysics, Zhejiang University (2014.8-2020.9); Visiting Student in Population Epigenetics and Epigenomics, Technical University of Munich (2018.3-2019.4)
 - name: Wenlong Li
-  photo: liwenlong
+  photo: liwenlong.jpg
   info: Postdoc Fellow, Apr. 2024-
   email: liwenlong@westlake.edu.cn
   number_educ: 2
