--- a/_data/students.yml
+++ b/_data/students.yml
@@ -8,7 +8,7 @@
 #  education3:
 #  education4:
 - name: Jinhong Lu
-  photo: jinhong.jpg
+  photo: lujinghong2.jpg
   info: PhD student, Sept. 2021 -
   email: lujinhong@westlake.edu.cn
   number_educ: 1
