--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -25,3 +25,10 @@
   email: dingyihang@westlake.edu.cn
   number_educ: 1
   education1: B.E. in Bioinformatics, Southeast University
+- name: Guoqiang Jiang
+  photo: jiangguoqiang.jpg
+  info: Lab manager, Oct. 2022-
+  email: jiangguoqiang@westlake.edu.cn
+  number_educ: 2
+  education1: B.S. in Applied Psychology, Binzhou Medical University
+  education2: M.S. in Biotechnology, Dalian Medical University
