--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - headline: <b> We are recuriting!</b>
+- date: Aug. 18 2024
+  headline: "Welcome Huan Liu!"
 - date: Mar. 11 2024
   headline: "Welcome Wenlong!"
 - date: Nov. 22 2023
