--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -21,13 +21,13 @@
   education2: M.S Shanghai Jiao Tong University(Molecular Biology)
 - name: Yihang Ding
   photo: dingyihang.jpeg
-  info: Research Assistant, Jul. 2022-
+  info: Research Assistant, Jul. 2022-May. 2023
   email: dingyihang@westlake.edu.cn
   number_educ: 1
   education1: B.E. in Bioinformatics, Southeast University
 - name: Guoqiang Jiang
   photo: jiangguoqiang.jpg
-  info: Lab manager, Oct. 2022-
+  info: Lab manager, Oct. 2022-Feb. 2024
   email: jiangguoqiang@westlake.edu.cn
   number_educ: 2
   education1: B.S. in Applied Psychology, Binzhou Medical University
