--- a/_data/alumni_bsc.yml
+++ b/_data/alumni_bsc.yml
@@ -1,4 +1,4 @@
 #- name: test, Spring 2021
-- name: Yuanshi Wang
-  photo: wangyuanshi.jpg
-  info: Undergraduate Student, Sept. 2022- 
+#- name: Yuanshi Wang
+#  photo: wangyuanshi.jpg
+#  info: Undergraduate Student, Sept. 2022- 
