--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -32,3 +32,6 @@
   number_educ: 2
   education1: B.S. in Applied Psychology, Binzhou Medical University
   education2: M.S. in Biotechnology, Dalian Medical University
+- name: Yuanshi Wang
+  photo: wangyuanshi.jpg
+  info: Undergraduate Student, Sept. 2022- Sept. 2024
