fix team page layout

--- a/_data/alumni_bsc.yml
+++ b/_data/alumni_bsc.yml
@@ -2,3 +2,5 @@
 #- name: Yuanshi Wang
 #  photo: wangyuanshi.jpg
 #  info: Undergraduate Student, Sept. 2022- 
+- name: Baozheng Xu
+  info: Undergraduate Student, Sept. 2023- 
