replace xubaozheng image

--- a/_data/alumni_bsc.yml
+++ b/_data/alumni_bsc.yml
@@ -3,5 +3,5 @@
 #  photo: wangyuanshi.jpg
 #  info: Undergraduate Student, Sept. 2022- 
 - name: Baozheng Xu
-  photo: bio-photo.jpg
+  photo: xubaozheng.jpg
   info: Undergraduate Student, Sept. 2023- 
