--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -44,3 +44,9 @@
   number_educ: 2
   education1: B.S. in biopharmaceutical, Wenzhou Medical University
   education2: M.S. in pharmacy, Wenzhou Medical University
+- name: Yiheng Du
+  photo: yiheng.jpg
+  info: Staff Scientist, Jun. 2025 -
+  number_educ: 2
+  education1: B.S. in Biology, Shandong University
+  education2: M.S. in Quantitative Biology and Bioinformatics, Australian National University
