--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -45,7 +45,7 @@
   education1: B.S. in biopharmaceutical, Wenzhou Medical University
   education2: M.S. in pharmacy, Wenzhou Medical University
 - name: Yiheng Du
-  photo: Yiheng.jpg
+  photo: yiheng.jpg
   info: Staff Scientist, Jun. 2025 -
   number_educ: 2
   education1: B.S. in Biology, Shandong University
