--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,8 @@
 - headline: <b> We are recuriting!</b>
+- date: Aug. 19 2025
+  headline: "Farewell Yonghe!"
+- date: Jun. 10 2025
+  headline: "Welcome Yiheng!"
 - date: Aug. 18 2024
   headline: "Welcome Huan Liu!"
 - date: Mar. 11 2024
