--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -1,3 +1,9 @@
+- name: Yonghe Xia
+  photo: xiayonghe.jpg
+  info: Staff Scientist, Apr. 2022- Agu. 2025
+  email: xiayonghe@westlake.edu.cn
+  number_educ: 1
+  education1: B.S. in Bioscience, Minnan Normal University
 - name: Zhen Xu
   photo: xuzhen.jpg
   info: Research Assistant, Nov. 2021-Mar. 2022
